# auto-crab

./: README.md  TASKS.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: KNOWLEDGE-BASE-DESIGN.md  ai-life-assistant-playbook.md  architecture.md  claude-code-litellm-proxy.md  cursor-region-proxy-guide.md  desktop-vision-automation-plan.md  feishu-setup.md  life-assistant-plan.md  vision-model-selection.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  test_vl_parse.rs
src-tauri/capabilities/: default.json
src-tauri/defaults/: auto-crab.default.toml
src-tauri/examples/: store_key.rs  test_keychain.rs  test_vl.rs
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/config/: mod.rs  schema.rs
src-tauri/src/core/: agent.rs  context.rs  engine.rs  hooks.rs  long_memory.rs  macros.rs  memory.rs  mod.rs  orchestrator.rs  planner.rs  scheduler.rs  snapshots.rs
src-tauri/src/mcp/: client.rs  server.rs
src-tauri/src/models/: mod.rs  ollama.rs  openai_compat.rs  provider.rs  router.rs
src-tauri/src/plugins/: manifest.rs  mod.rs  sandbox.rs
src-tauri/src/remote/: approval_bridge.rs  feishu.rs  mod.rs  protocol.rs  webhook_server.rs  wechat_work.rs
src-tauri/src/security/: approval.rs  audit.rs  credentials.rs  mod.rs  risk.rs
src-tauri/src/tools/: browser.rs  file_ops.rs  mod.rs  registry.rs  shell.rs  ui_automation.rs  web.rs
src/components/ApprovalDialog/: ApprovalDialog.tsx
src/components/AuditLog/: AuditLogView.tsx
src/components/Chat/: ChatMessage.tsx  ChatView.tsx  ModelSelector.tsx
src/components/Dashboard/: PerformanceDashboard.tsx
src/components/Onboarding/: OnboardingWizard.tsx
src/components/Settings/: SettingsView.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/TaskPanel/: TaskPanel.tsx
src/stores/: appStore.ts  chatStore.ts  themeStore.ts
