[package]
name = "auto-crab"
version = "0.1.0"
description = "Desktop AI Assistant - More secure, more controllable, simpler than OpenClaw"
authors = ["zelex"]
edition = "2021"

[lib]
name = "auto_crab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
thiserror = "2"
anyhow = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
directories = "6"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
tokio-stream = "0.1"
regex = "1"
shellexpand = "3"
url = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
